Fix low-hanging letters getting cut off in toolbar

--- a/public/assets/stylesheets/application.css
+++ b/public/assets/stylesheets/application.css
@@ -54,6 +54,7 @@
   font-size: 11px;
   height: 20px;
   padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .navbar .control-label {
